syntax = "proto3";

package mizer;

service SessionApi {
  rpc GetSession (SessionRequest) returns (stream Session) {}
  rpc JoinSession (ClientAnnouncement) returns (Session) {}
  rpc NewProject (ProjectRequest) returns (ProjectResponse) {}
  rpc LoadProject (LoadProjectRequest) returns (ProjectResponse) {}
  rpc SaveProject (ProjectRequest) returns (ProjectResponse) {}
  rpc SaveProjectAs (SaveProjectAsRequest) returns (ProjectResponse) {}
  rpc LoadHistory (LoadHistoryRequest) returns (stream History) {}
}

message ProjectRequest {
}
message LoadProjectRequest {
  string path = 1;
}
message SaveProjectAsRequest {
  string path = 1;
}
message ProjectResponse {
}

message ClientAnnouncement {
  string name = 1;
}

message SessionRequest {
}

message Session {
  optional string file_path = 1;
  repeated SessionDevice devices = 2;
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated string project_history = 3;
}

message SessionDevice {
  string name = 1;
  repeated string ips = 2;
  DeviceClock clock = 3;
  double ping = 4;
}

message DeviceClock {
  bool master = 1;
  double drift = 2;
}

message LoadHistoryRequest {
}
message History {
  repeated HistoryItem items = 1;
  uint64 pointer = 2;
}

message HistoryItem {
  string label = 1;
  uint64 timestamp = 2;
}
